--- a/index.html
+++ b/index.html
@@ -9628,7 +9628,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200306170352208" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200307171359518" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -17736,7 +17736,7 @@ __אופן ההכנה____
 
 &lt;&lt;englink [[Éclair with liver stuffing]]&gt;&gt;</pre>
 </div>
-<div created="20180314180839992" modified="20180605132316681" tags="[[מתכונים טבעוניים]] [[מתכוני ארוחת הכריסמס]] [[חיות אוכל]] הצוות [[למה הדבר דומה]] מתכונים" title="פטה טבעוני">
+<div created="20180314180839992" modified="20200307163730637" tags="[[מתכונים טבעוניים]] [[מתכוני ארוחת הכריסמס]] [[חיות אוכל]] הצוות [[למה הדבר דומה]] מתכונים" title="פטה טבעוני">
 <pre>[img[pictures/vegan-pate.jpg]]
 
 
@@ -17761,9 +17761,14 @@ __אופן ההכנה____
 (אם חסרים לכם טעמים אפשר להוסיף עוד טיפה או שתיים משמן השומשום)
 
 
-4. מרפדים תבנית אינגליש קייק בניילון נצמד, יוצקים לתוכה את המשחה, וממשיכים לעטוף היטב עם הניילון הנצמד. מאפסנים במקרר לכמה שעות (6-8) עד להגשה.</pre>
+4. מרפדים תבנית אינגליש קייק בניילון נצמד, יוצקים לתוכה את המשחה, וממשיכים לעטוף היטב עם הניילון הנצמד. מאפסנים במקרר לכמה שעות (6-8) עד להגשה.
+
+
+
+&lt;&lt;englink [[Vegan pate]]&gt;&gt;
+</pre>
 </div>
-<div created="20180316115628327" modified="20180605132342355" tags="הצוות [[מתכוני ארוחת הכריסמס]] [[חיות אוכל]] מתכונים" title="פטה כבד עוף">
+<div created="20180316115628327" modified="20200307164025176" tags="הצוות [[מתכוני ארוחת הכריסמס]] [[חיות אוכל]] מתכונים" title="פטה כבד עוף">
 <pre>[img[pictures/pate-kaved.jpg]]
 
 החומרים:
@@ -17791,7 +17796,11 @@ __אופן ההכנה____
 5. טוחנים הכל במעבד מזון עם מעט מלח ופלפל - טועמים ומתקנים אם צריך
 
 6. את משחת הכבד מוזגים לכלי הגשה או לתוך תבנית אנגליש מרופדת בניילון נצמד, אוטמים ומניחים במקרר ל 6 שעות לפחות.
-</pre>
+
+
+
+
+&lt;&lt;englink [[Chicken pate]]&gt;&gt;</pre>
 </div>
 <div created="20170401151233604" modified="20200216143717620" tags="[[אחות כהן]]" title="פיליפ">
 <pre>[img[pictures/phillip.jpg]]
@@ -17866,7 +17875,7 @@ __אופן ההכנה____
 
 &lt;&lt;englink [[Pele Ozen]]&gt;&gt;</pre>
 </div>
-<div created="20170405154213420" modified="20180605133824698" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="פלפלים קלויים">
+<div created="20170405154213420" modified="20200307164400698" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="פלפלים קלויים">
 <pre>[img[pictures/pilpelim.jpg]]
 
 !!![[אווה]]:
@@ -17881,7 +17890,11 @@ __אופן ההכנה____
 * מוזגים לתוך מיץ הפלפלים כמות זהה של שמן זית, מערבבים ומוזגים מעל הפלפלים.
 * מפזרים מלח קורט מלח ים גס.
 * אפשר להגיש מיד או לתת לזה לעמוד, או לאפסן ולהגיש גם כמה ימים לאחר ההכנה.
-</pre>
+
+
+
+
+&lt;&lt;englink [[Roasted peppers]]&gt;&gt;</pre>
 </div>
 <div created="20170413193637751" modified="20200219174135650" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="פנטונה">
 <pre>[img[pictures/panatone.jpg]]
@@ -17986,7 +17999,7 @@ Fapina''
 
 &lt;&lt;englink [[Prince]]&gt;&gt;</pre>
 </div>
-<div created="20180429154850092" modified="20180605132359869" tags="[[למה הדבר דומה]] [[מתכונים טבעוניים]] [[חיות אוכל]] מתכונים" title="צ'ילי כמו קארנה">
+<div created="20180429154850092" modified="20200307164804022" tags="[[למה הדבר דומה]] [[מתכונים טבעוניים]] [[חיות אוכל]] מתכונים" title="צ'ילי כמו קארנה">
 <pre>[img[pictures/chilli-cmo-karne.jpg]]
 
 !!![[הצוות]]:
@@ -18038,7 +18051,7 @@ Fapina''
 
 
 
-
+&lt;&lt;englink [[Chili cone carne]]&gt;&gt;
 
 </pre>
 </div>
@@ -18227,14 +18240,20 @@ Fapina''
 
 </pre>
 </div>
-<div created="20200207191703835" modified="20200212184731970" tags="[[בדרך לאן שהוא]] [[חיות אוכל]] מטבחים מתכונים [[מתכונים טבעוניים]]" title="קודם כל כרישה ומנגולד">
+<div created="20200207191703835" modified="20200307165128749" tags="[[בדרך לאן שהוא]] [[חיות אוכל]] מטבחים מתכונים [[מתכונים טבעוניים]]" title="קודם כל כרישה ומנגולד">
 <pre>[img[pictures/kresha-ve-mangold.jpg]]
 
 !!![[יויו]]:
 
-[[גורה ואירי|אירי וגורה]] נסעו לכמה ימים ואני כולי לבד [[בדירה|כוכב המשאלות 01]]. לא רוצה לעשות כלום. לא בא לי לבשל. לא בא לי על אוכל מוזמן. אין לי כח לצאת מהבית. אני קם בקושי מהספה באמצע [[חינוך מיני]], ומתחיל להוציא מהמקרר. חותך מנגולד וכרישה ושן שום ומתחיל לצלות אותם לאט בסוטאז'. חתכתי גם בטטות דקות והחלטתי שאבשל את אלה עם מעט מים, ג'ינג'ר, מלח ופלפל שחור ובסוף אניחם על קוסקוס שאכין משקית. הייתי סגור שזה מה שבא לי. חתכתי את [[העגבניות|עגבניות בתנור]], הבטטות התבשלו וזה נראה היה די נחמד. בדרך לעגבניות החלטתי שאני מוסיף עדשים שחורות לתבשיל ככה כמו שהן חצי כוס, הוספתי עוד מים ועוד קצת מלח ובישלתי הכל עד שהעדשים התרככו והייתה לי ארוחה נחמדה מאד.</pre>
+[[גורה ואירי|אירי וגורה]] נסעו לכמה ימים ואני כולי לבד [[בדירה|כוכב המשאלות 01]]. לא רוצה לעשות כלום. לא בא לי לבשל. לא בא לי על אוכל מוזמן. אין לי כח לצאת מהבית. אני קם בקושי מהספה באמצע [[חינוך מיני]], ומתחיל להוציא מהמקרר. חותך מנגולד וכרישה ושן שום ומתחיל לצלות אותם לאט בסוטאז'. חתכתי גם בטטות דקות והחלטתי שאבשל את אלה עם מעט מים, ג'ינג'ר, מלח ופלפל שחור ובסוף אניחם על קוסקוס שאכין משקית. הייתי סגור שזה מה שבא לי. חתכתי את [[העגבניות|עגבניות בתנור]], הבטטות התבשלו וזה נראה היה די נחמד. בדרך לעגבניות החלטתי שאני מוסיף עדשים שחורות לתבשיל ככה כמו שהן חצי כוס, הוספתי עוד מים ועוד קצת מלח ובישלתי הכל עד שהעדשים התרככו והייתה לי ארוחה נחמדה מאד.
+
+
+
+
+&lt;&lt;englink [[First we take leek and mangold]]&gt;&gt;
+</pre>
 </div>
-<div created="20170415002104316" modified="20190423062056643" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="קוסקוס">
+<div created="20170415002104316" modified="20200307165511591" tags="[[מתכוני ארוחת הכריסמס]] מתכונים [[מתכונים טבעוניים]]" title="קוסקוס">
 <pre>[img[pictures/coucous.jpg]]
 
 
@@ -18288,7 +18307,12 @@ Fapina''
 
 6. מאדים את הקוסקוס בשנית, הפעם כ-20 דקות. ומסירים מן האש.
 
-7. מגישים: על צלחת גדולה ערימת קוסקוס ועליה המרק.</pre>
+7. מגישים: על צלחת גדולה ערימת קוסקוס ועליה המרק.
+
+
+
+&lt;&lt;englink [[Couscous]]&gt;&gt;
+</pre>
 </div>
 <div created="20170817155826253" modified="20200217120916501" tags="סדרות טלוויזיה [[הכפר הגלובלי]]" title="קופים ממונעים">
 <pre>[img[pictures/kofim-memunaim.jpg]]
@@ -18314,7 +18338,7 @@ Fapina''
 
 &lt;&lt;englink [[Monkeys with car keys]]&gt;&gt;</pre>
 </div>
-<div created="20180212123730869" modified="20180605132418202" tags="[[חיות אוכל]] מתכונים" title="קנלוני">
+<div created="20180212123730869" modified="20200307165759734" tags="[[חיות אוכל]] מתכונים" title="קנלוני">
 <pre>[img[pictures/cannelloni.jpg]]
 
 !!![[יויו]]:
@@ -18362,7 +18386,7 @@ Fapina''
 
 
 
-
+&lt;&lt;englink [[Cannelloni]]&gt;&gt;
 
 
 
@@ -18433,7 +18457,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20180324124658340" modified="20190314145919530" tags="הצוות [[חיות אוכל]] מתכונים אפייה" title="קראסט תפוחים">
+<div created="20180324124658340" modified="20200307170154919" tags="הצוות [[חיות אוכל]] מתכונים אפייה" title="קראסט תפוחים">
 <pre>[img[pictures/apple-crust.jpg]]
 
 קראסט כזה אנחנו מכינים כשנשארים לנו תפוחים שאין סיכוי שכבר נאכל וזה לא שהם רקובים כי אם לכל היותר מעט מוכתמים. את כתמי הבשלות מסירים כמובן כשמקלפים. זה מאפה שמומלץ לאכול כחצי שעה אחרי שיצא (לבד) מן התנור.
@@ -18458,7 +18482,10 @@ Fapina''
 
 8. אופים בחום בינוני נמוך 40 דקות עד שעה (תלוי בתנור)
 
-6. </pre>
+
+
+&lt;&lt;englink [[Apple crust]]&gt;&gt;
+</pre>
 </div>
 <div created="20180629142454101" modified="20200215225304351" tags="[[אחיות חוץ]] [[מטא בדיון]]" title="קרל אובה קנאוסגורד">
 <pre>[img[pictures/karl-ove.jpg]]
@@ -18547,7 +18574,7 @@ Fapina''
 &lt;&lt;englink [[Roger]]&gt;&gt;
 </pre>
 </div>
-<div created="20170718152042465" modified="20180605132506798" tags="[[חיות אוכל]] מתכונים" title="רוטב בשאמל">
+<div created="20170718152042465" modified="20200307170507135" tags="[[חיות אוכל]] מתכונים" title="רוטב בשאמל">
 <pre>[img[pictures/rotev-bashamel.jpg]]
 
 
@@ -18573,6 +18600,9 @@ Fapina''
 
 [[עכשיו אפשר לתבל אותו בדרכים רבות, למזוג אותו על דברים שונים ולאפות|קנלוני]].
 
+
+
+&lt;&lt;englink [[Béchamel sauce]]&gt;&gt;
 </pre>
 </div>
 <div created="20181107110533011" modified="20200215171451400" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] פעם" title="רוממה">
@@ -18584,7 +18614,7 @@ Fapina''
 
 &lt;&lt;englink [[Romema]]&gt;&gt;</pre>
 </div>
-<div created="20180617165026649" modified="20180619121542245" tags="[[חיות אוכל]] מתכונים [[סיפורים אמיתיים]]" title="רוסטביף">
+<div created="20180617165026649" modified="20200307170832617" tags="[[חיות אוכל]] מתכונים [[סיפורים אמיתיים]]" title="רוסטביף">
 <pre>[img[pictures/roast-beef.jpg]]
 
 !!![[יויו]]:
@@ -18614,7 +18644,10 @@ Fapina''
 
 6. אחרי 15 הדקות מורידים את הטמפרטורה ל170- 180 מעלות ואופים ארבעים דקות נוספות. בין לבין רצוי לסובב את התבנית ומי שאוהב פחות דם יכול גם רבע שעה לפני סוף האפייה לחתוך שני חתכים בחלקו העליון שך הבשר.
 
-7. מוציאים מהתנור, נותנים לבשר לעמוד עוד 15 דקות ואפשר לחתוך ולאכול.</pre>
+7. מוציאים מהתנור, נותנים לבשר לעמוד עוד 15 דקות ואפשר לחתוך ולאכול.
+
+
+&lt;&lt;englink [[Roast beef]]&gt;&gt;</pre>
 </div>
 <div created="20170202133543180" modified="20200217174740251" tags="[[הנחלה בה גדלתי]] בתים" title="רזיאל ורפאל">
 <pre>[img[pictures/refaelveraziel.jpg]]
@@ -18938,7 +18971,7 @@ Fapina''
 [img[pictures/qJoUOLqvuzPjy1Pr.jpg]]
 </pre>
 </div>
-<div created="20180620184300136" modified="20190314145525987" tags="[[חיות אוכל]] [[אירי טוענת]] מתכונים אפייה" title="שוקולד פאדג'">
+<div created="20180620184300136" modified="20200307171133654" tags="[[חיות אוכל]] [[אירי טוענת]] מתכונים אפייה" title="שוקולד פאדג'">
 <pre>[img[pictures/chocolate-fudge.jpg]]
 
 !!![[אירי]]:
@@ -18971,7 +19004,10 @@ Fapina''
 
 7. אופים עשר דקות, מנמיכים את החום ל 170 מעלות וממשיכים לאפות עוד 20 דקות עד 1/2 שעה לפי הצורך
 
-</pre>
+
+
+
+&lt;&lt;englink [[Chocolate fudge]]&gt;&gt;</pre>
 </div>
 <div created="20180725153933793" modified="20200217143839565" tags="[[כאן בגטו]] [[חיות אוכל]]" title="שורצקי">
 <pre>[img[pictures/shorezky.jpg]]
@@ -18986,7 +19022,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20190306171103506" modified="20190314145541129" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="שושני שמרים">
+<div created="20190306171103506" modified="20200307171428417" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="שושני שמרים">
 <pre>[img[pictures/shoshanim.jpg]]
 
 !!![[אווה]]:
@@ -19034,6 +19070,10 @@ Fapina''
 6.אופים בחום בינוני נמוך כ-40 דקות (השושנים יהיו בצבע אפוי בהיר)
 
 7. מוזגים על השושנים את החלב המורתח עם מעט תמצית או סוכר וניל בתוכו, בערך 2-3 כפות על כל שושנה, וממשיכים לאפות 10 דקות נוספות.
+
+
+
+&lt;&lt;englink [[Yeast roses]]&gt;&gt;
 </pre>
 </div>
 <div created="20170717183951845" modified="20180704184958199" tags="[[כשהם ישנים]] [[מתכונים טבעוניים]] ארוחות [[חיות אוכל]] מתכונים" title="שותה עם גורה">
