--- a/english.html
+++ b/english.html
@@ -303,6 +303,10 @@ Error message and password prompt
 
 <li>Ayala Malach Pines</li>
 
+<li>Baked potatoes and yams</li>
+
+<li>Baked turkey</li>
+
 <li>Baking</li>
 
 <li>Barby</li>
@@ -431,6 +435,8 @@ Error message and password prompt
 
 <li>Dreams that we've dreamt</li>
 
+<li>Drinking with Gura</li>
+
 <li>Éclair with liver stuffing</li>
 
 <li>Edith</li>
@@ -484,6 +490,8 @@ Error message and password prompt
 <li>Gili's kiosk</li>
 
 <li>Graziani</li>
+
+<li>Green beans</li>
 
 <li>Grey’s Anatomy</li>
 
@@ -805,6 +813,8 @@ Error message and password prompt
 
 <li>Scents</li>
 
+<li>Schnitzel</li>
+
 <li>Searching for Iry</li>
 
 <li>Semolina cake</li>
@@ -927,6 +937,8 @@ Error message and password prompt
 
 <li>They make peace</li>
 
+<li>Three colored rice and roots stew</li>
+
 <li>TLV</li>
 
 <li>To draw</li>
@@ -955,9 +967,13 @@ Error message and password prompt
 
 <li>Urban Nature</li>
 
+<li>Vegan kubbeh</li>
+
 <li>Vegan pate</li>
 
 <li>Vegan recipes</li>
+
+<li>Vegetables stew</li>
 
 <li>Vegetarian lasagne</li>
 
@@ -998,6 +1014,8 @@ Error message and password prompt
 <li>Wyclef Jean</li>
 
 <li>Ya</li>
+
+<li>Yeast crantz cake</li>
 
 <li>Yeast roses</li>
 
@@ -8890,7 +8908,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200307165202399" title="$:/temp/search">
+<div created="20161023184814872" modified="20200307174313723" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9354,7 +9372,25 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
-<div created="20200216150039212" modified="20200307171254291" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200307175504541" modified="20200307175626733" tags="Recipes [[Christmas dinner Recipes]]" title="Baked potatoes and yams">
+<pre>
+[img[pictures/batatot-batanoor.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[תפוחי אדמה ובטטות בתנור]]&gt;&gt;</pre>
+</div>
+<div created="20200307175746961" modified="20200307175858351" tags="[[Christmas dinner Recipes]] Recipes" title="Baked turkey">
+<pre>
+[img[pictures/turkey-cock.jpg]]
+
+
+
+ &lt;&lt;heblink [[תרנגול הודו אפוי]]&gt;&gt;
+</pre>
+</div>
+<div created="20200216150039212" modified="20200307180237087" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -10132,6 +10168,15 @@ This is [[Sweet David Byrne|http://davidbyrne.com/]].
 
  &lt;&lt;heblink [[חלומות שחלמנו]]&gt;&gt;</pre>
 </div>
+<div created="20200307173106094" modified="20200307173245110" tags="[[When they sleep]] Recipes [[Food addicts]] [[Vegan recipes]] Meals" title="Drinking with Gura">
+<pre>
+[img[pictures/miz-anavim.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[שותה עם גורה]]&gt;&gt;</pre>
+</div>
 <div created="20200306170042186" modified="20200306170325203" tags="Recipes [[Christmas dinner Recipes]]" title="Éclair with liver stuffing">
 <pre>
 [img[pictures/pachzaniyot.jpg]]
@@ -10466,6 +10511,15 @@ Gigi is part of The [[Emin Society|https://en.wikipedia.org/wiki/Emin_(esoteric_
 
 
  &lt;&lt;heblink [[גרציאני]]&gt;&gt;</pre>
+</div>
+<div created="20200307174002630" modified="20200307174129620" tags="Recipes [[Christmas dinner Recipes]]" title="Green beans">
+<pre>
+[img[pictures/sheooit.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[שעועית ירוקה בחמאה ושום]]&gt;&gt;</pre>
 </div>
 <div created="20200220161521230" modified="20200220162527887" tags="TV [[TV Series]] Mothers" title="Grey’s Anatomy">
 <pre>[img[pictures/greys-anatomy.jpg]]
@@ -12395,6 +12449,16 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
 
  &lt;&lt;heblink [[ריחות]]&gt;&gt;</pre>
 </div>
+<div created="20200307173739710" modified="20200307173845648" tags="Recipes [[Food addicts]]" title="Schnitzel">
+<pre>
+[img[pictures/schnitzel.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[שניצל]]&gt;&gt;
+</pre>
+</div>
 <div created="20200219185255391" modified="20200219185508059" tags="[[On the road to somewhere]] [[Iry and Gura]]" title="Searching for Iry">
 <pre>[img[pictures/mechapeset-et-iri.jpg]]
 
@@ -13362,6 +13426,15 @@ In the animal farm'', they make an effort not to exaggerate with the freedom of 
 
  &lt;&lt;heblink [[עושים שלום]]&gt;&gt;</pre>
 </div>
+<div created="20200307174943952" modified="20200307175230597" tags="Recipes [[Christmas dinner Recipes]] [[Vegan recipes]]" title="Three colored rice and roots stew">
+<pre>
+[img[pictures/orez-bishlosha.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[תבשיל שורשים ואורז בשלושה צבעים]]&gt;&gt;</pre>
+</div>
 <div created="20200219161330581" modified="20200219162258283" tags="[[Here in the Ghetto]] Houses" title="TLV">
 <pre>[img[pictures/tlv.jpg]]
 
@@ -13495,6 +13568,14 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
 </pre>
 </div>
+<div created="20200307180029936" modified="20200307180258626" tags="Recipes [[Food addicts]] [[Vegan recipes]]" title="Vegan kubbeh">
+<pre>
+[img[pictures/veg-cube.jpg]]
+
+
+
+ &lt;&lt;heblink [[קובה טבעוני]]&gt;&gt;</pre>
+</div>
 <div created="20200307163414013" modified="20200307163632851" tags="Recipes [[Vegan recipes]] [[what does a thing assemble]] [[Christmas dinner Recipes]] [[The team]]" title="Vegan pate">
 <pre>
 [img[pictures/vegan-pate.jpg]]
@@ -13517,6 +13598,13 @@ The farm's animals are delighted with surprise.
 
  &lt;&lt;heblink [[מתכונים טבעוניים]]&gt;&gt;
 </pre>
+</div>
+<div created="20200307174337823" modified="20200307174513833" tags="Recipes [[Food addicts]] [[Christmas dinner Recipes]] [[The team]] [[Vegan recipes]]" title="Vegetables stew">
+<pre>
+[img[pictures/tavshil-yerakot.jpg]]
+
+
+ &lt;&lt;heblink [[תבשיל ירקות]]&gt;&gt;</pre>
 </div>
 <div created="20200306145146590" modified="20200306145250661" tags="Recipes [[Christmas dinner Recipes]]" title="Vegetarian lasagne">
 <pre>
@@ -13746,6 +13834,17 @@ I had doubts regarding [[Wyclef|https://www.imdb.com/name/nm0419889/]], cause he
 
 
  &lt;&lt;heblink [[יה]]&gt;&gt;</pre>
+</div>
+<div created="20200307173401694" modified="20200307173541719" tags="[[The kitchen by Genevieve]] Recipes Baking [[When they sleep]] [[Food addicts]]" title="Yeast crantz cake">
+<pre>
+[img[pictures/shmarim-krantz.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[שמרים קרנץ]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20200307171200212" modified="20200307171331565" tags="Recipes [[When they sleep]] Baking [[Food addicts]]" title="Yeast roses">
 <pre>
