--- a/index.html
+++ b/index.html
@@ -9208,7 +9208,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200306133832153" title="$:/temp/search">
+<div created="20161023184814872" modified="20200307174853670" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9628,7 +9628,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200307171359518" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200307180130132" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -18169,7 +18169,7 @@ Fapina''
 &lt;&lt;englink [[Queng]]&gt;&gt;
 </pre>
 </div>
-<div created="20190422120310153" modified="20190424141120699" tags="[[למה הדבר דומה]] [[מתכונים טבעוניים]] [[חיות אוכל]]" title="קובה טבעוני">
+<div created="20190422120310153" modified="20200307180213670" tags="[[מתכונים טבעוניים]] [[חיות אוכל]] מתכונים" title="קובה טבעוני">
 <pre>[img[pictures/veg-cube.jpg]]
 
 !!![[הצוות]]:
@@ -18238,7 +18238,8 @@ Fapina''
 
 
 
-</pre>
+
+&lt;&lt;englink [[Vegan kubbeh]]&gt;&gt;</pre>
 </div>
 <div created="20200207191703835" modified="20200307165128749" tags="[[בדרך לאן שהוא]] [[חיות אוכל]] מטבחים מתכונים [[מתכונים טבעוניים]]" title="קודם כל כרישה ומנגולד">
 <pre>[img[pictures/kresha-ve-mangold.jpg]]
@@ -19076,7 +19077,7 @@ Fapina''
 &lt;&lt;englink [[Yeast roses]]&gt;&gt;
 </pre>
 </div>
-<div created="20170717183951845" modified="20180704184958199" tags="[[כשהם ישנים]] [[מתכונים טבעוניים]] ארוחות [[חיות אוכל]] מתכונים" title="שותה עם גורה">
+<div created="20170717183951845" modified="20200307173336736" tags="[[כשהם ישנים]] [[מתכונים טבעוניים]] ארוחות [[חיות אוכל]] מתכונים" title="שותה עם גורה">
 <pre>[img[pictures/miz-anavim.jpg]]
 
 !!![[אווה]]:
@@ -19089,7 +19090,13 @@ Fapina''
 
 2. על כל שוט של וודקה הוספנו חצי כוס ממיץ ענבים וקרח מלוא הכוס
 
-והיה מעולה</pre>
+והיה מעולה
+
+
+
+
+&lt;&lt;englink [[Drinking with Gura]]&gt;&gt;
+</pre>
 </div>
 <div created="20180826195804165" modified="20180828145142414" tags="[[אחיות חוץ]] מוזיקה" title="שי טרא ליטמן">
 <pre>[img[pictures/shay-tra-litman.jpg]]
@@ -19186,7 +19193,7 @@ Fapina''
 
 &lt;&lt;englink [[Send]]&gt;&gt;</pre>
 </div>
-<div created="20170707184028118" modified="20190314145948472" tags="[[המטבח על פי ז'נבייב]] [[חיות אוכל]] [[כשהם ישנים]] מתכונים אפייה" title="שמרים קרנץ">
+<div created="20170707184028118" modified="20200307173700683" tags="[[המטבח על פי ז'נבייב]] [[חיות אוכל]] [[כשהם ישנים]] מתכונים אפייה" title="שמרים קרנץ">
 <pre>[img[pictures/shmarim-krantz.jpg]]
 
 !!![[ז'נבייב]]:
@@ -19250,9 +19257,11 @@ Fapina''
 12. מחכים חצי שעה ומגישים.
 
 
-</pre>
+
+
+&lt;&lt;englink [[Yeast crantz cake]]&gt;&gt;</pre>
 </div>
-<div created="20170622203416653" modified="20180605132611481" tags="[[חיות אוכל]] מתכונים" title="שניצל">
+<div created="20170622203416653" modified="20200307173939540" tags="[[חיות אוכל]] מתכונים" title="שניצל">
 <pre>[img[pictures/schnitzel.jpg]]
 
 !!![[יויו]]:
@@ -19273,9 +19282,14 @@ Fapina''
 
 6. מניחים את פרוסות השניצלים במחבת ומתחילים לצלות. בהתחלה על החום הגבוה יותר של הלהבה הנמוכה, וכעבור דקה שתיים מנמיכים, וממשיכים לצלות כמה דקות נוספות.
 
-7. הופכים את השניצלים, מוסיפים שומן אם צריך, וממשיכים בצליה - ככה - עשרים דקות עד חצי שעה. אפשר לשחק עם הלהבה. לא מוסיפים עוד ועוד שומן, כי אם לפי הצורך.</pre>
+7. הופכים את השניצלים, מוסיפים שומן אם צריך, וממשיכים בצליה - ככה - עשרים דקות עד חצי שעה. אפשר לשחק עם הלהבה. לא מוסיפים עוד ועוד שומן, כי אם לפי הצורך.
+
+
+
+
+&lt;&lt;englink [[Schnitzel]]&gt;&gt;</pre>
 </div>
-<div created="20170406190136484" modified="20180605133958382" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="שעועית ירוקה בחמאה ושום">
+<div created="20170406190136484" modified="20200307174232220" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="שעועית ירוקה בחמאה ושום">
 <pre>[img[pictures/sheooit.jpg]]
 
 !!![[אווה]]:
@@ -19294,6 +19308,7 @@ Fapina''
 * מסירים מן האש ומגישים, וזה יכול להאכל גם בטמפרטורת החדר, ובמקרר להישמר עד שלושה ימים.
 
 
+&lt;&lt;englink [[Green beans]]&gt;&gt;
 </pre>
 </div>
 <div created="20170820121344664" modified="20200219163208983" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="שערות לאחור">
@@ -19382,7 +19397,7 @@ Fapina''
 &lt;&lt;englink [[Saraleh would have liked it]]&gt;&gt;
 </pre>
 </div>
-<div created="20180315105819806" modified="20180605132646732" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] [[חיות אוכל]] הצוות מתכונים" title="תבשיל ירקות">
+<div created="20180315105819806" modified="20200307174812348" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] [[חיות אוכל]] הצוות מתכונים" title="תבשיל ירקות">
 <pre>[img[pictures/tavshil-yerakot.jpg]]
 
 
@@ -19420,9 +19435,9 @@ Fapina''
 
 
 
-</pre>
+&lt;&lt;englink [[Vegetables stew]]&gt;&gt;</pre>
 </div>
-<div created="20170408234445334" modified="20180605134022802" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="תבשיל שורשים ואורז בשלושה צבעים">
+<div created="20170408234445334" modified="20200307175258728" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="תבשיל שורשים ואורז בשלושה צבעים">
 <pre>[img[pictures/orez-bishlosha.jpg]]
 
 !!![[אלפרד]]:
@@ -19442,7 +19457,9 @@ Fapina''
 
 * מבשלים על אש נמוכה ובודקים מידי פעם את מצב המים - מוסיפים רקלגובה האורז ולא יותר עד עשרים דקות לפני הסוף ובעשרים הדקות האחרונות מבשלים עד שהמים מתכלים.
 
-</pre>
+
+
+&lt;&lt;englink [[Three colored rice and roots stew]]&gt;&gt;</pre>
 </div>
 <div created="20180107163950358" modified="20180114152729887" tags="[[סיפורים אמיתיים]]" title="תהפוכת">
 <pre>[img[pictures/tahapochet.jpg]]
@@ -19492,7 +19509,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170404162732372" modified="20180605134048011" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="תפוחי אדמה ובטטות בתנור">
+<div created="20170404162732372" modified="20200307175725035" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="תפוחי אדמה ובטטות בתנור">
 <pre>[img[pictures/batatot-batanoor.jpg]]
 
 !!![[אירי]]:
@@ -19503,7 +19520,11 @@ Fapina''
 * ממיסים בקערה חמישים גרם חמאה, לאחר שנמסה מערבבים לתוכה רבע כוס שמן זית, ומברישים את כל הפינות.
 * מפזרים מלח ים גס וגבעולי רוזמרין.
 * אופים 40 דקות ב180 מעלות ואחר כך מעלים את  הטמפרטורה ל-200 מעלות ואופים רבע שעה-עשרים דקות נוספות.
-</pre>
+
+
+
+
+&lt;&lt;englink [[Baked potatoes and yams]]&gt;&gt;</pre>
 </div>
 <div created="20161026221719159" modified="20170401171255749" tags="" title="תרבות הממשל היפנית">
 <pre>[img[pictures/90sBKBFvOgA1QT3a.jpg]]
@@ -19541,7 +19562,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170413144306056" modified="20180605134105590" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="תרנגול הודו אפוי">
+<div created="20170413144306056" modified="20200307175948924" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="תרנגול הודו אפוי">
 <pre>[img[pictures/turkey-cock.jpg]]
 
 !!![[ז'נבייב]]:
@@ -19571,6 +19592,7 @@ Fapina''
 
 
 
+&lt;&lt;englink [[Baked turkey]]&gt;&gt;
 </pre>
 </div>
 <div created="20161026110100007" modified="20170414181612395" tags="" title="תשבץ למאומנים">
